--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mysql": "^2.18.1",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
+    "qrcode": "^1.4.4",
     "request": "^2.88.2"
   }
 }
