--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "debug": "~2.6.9",
     "ejs": "^3.1.6",
     "express": "~4.16.1",
+    "express-fileupload": "^1.2.1",
     "express-https-redirect": "^1.0.0",
+    "fs": "0.0.1-security",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
+    "path": "^0.12.7",
     "qrcode": "^1.4.4",
     "request": "^2.88.2"
   }
