--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "express-https-redirect": "^1.0.0",
     "fs": "0.0.1-security",
     "http-errors": "~1.6.3",
+    "mailgun-js": "^0.22.0",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.5.0",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
